# AndroidTrainingRecorder

./: build.gradle  gradle.properties  settings.gradle
baselib/: build.gradle
baselib/src/main/: AndroidManifest.xml
baselib/src/main/res/layout/: layout_base_comm.xml
coroutine/: README.MD  build.gradle
coroutine/src/main/: AndroidManifest.xml
coroutine/src/main/res/values/: strings.xml
custom/: README.MD  build.gradle
custom/src/main/: AndroidManifest.xml
custom/src/main/res/layout/: activity_main.xml
gles/: README.MD  build.gradle
gles/src/main/res/layout/: activity_draw_simple.xml  item_main_list.xml
gles2.0/: build.gradle
gles2.0/src/main/: AndroidManifest.xml
gles3.0/: build.gradle
gles3.0/src/main/: AndroidManifest.xml
gles3.0/src/main/cpp/: CMakeLists.txt  jniImpl.cpp
gles3.0/src/main/cpp/render/: EGLRender.cpp  EGLRender.h  GLRenderContext.cpp  GLRenderContext.h
gles3.0/src/main/cpp/sample/: GLSampleBase.h  NV21TextureMapSample.cpp  NV21TextureMapSample.h  TextureMapSample.cpp  TextureMapSample.h  TriangleSample.cpp  TriangleSample.h
gles3.0/src/main/cpp/utils/: GLUtil.cpp  GLUtil.h  ImageDef.h  LogUtil.h
gles3.0/src/main/res/drawable/: selector_btn_select.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
libcamera/src/main/: AndroidManifest.xml
media/: build.gradle
media/src/main/: AndroidManifest.xml
permission/: README.MD  build.gradle
permission/src/main/: AndroidManifest.xml
video/: README.MD  build.gradle
video/src/main/: AndroidManifest.xml
video/src/main/cpp/: CMakeLists.txt  native-lib.cpp
(+162 files in other folders)
